--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "@prisma/client": "^5.15.1",
+    "express": "^4.19.2",
+    "mongodb": "^6.7.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.1"
   }
 }
